Update to use Spring Boot 3.2.