@@ -9,12 +9,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.18</version>
+		<version>3.2.5</version>
 	</parent>
 
 	<properties>
-		<start-class>com.github.fwi.sbhx.AppMain</start-class>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 	</properties>
 
 	<dependencies>
@@ -35,17 +34,17 @@
 			<!-- required to load resources from webjars via th-tag -->
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator-core</artifactId>
-			<version>0.55</version>
+			<version>0.58</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars.npm</groupId>
 			<artifactId>picocss__pico</artifactId>
-			<version>1.5.10</version>
+			<version>2.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars.npm</groupId>
 			<artifactId>htmx.org</artifactId>
-			<version>1.9.9</version>
+			<version>1.9.12</version>
 		</dependency>
 
 		<dependency>
@@ -82,6 +81,26 @@
 	<build>
 		<plugins>
 			<plugin>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<!-- Needed for "argLine" in surefire/failsafe plugins -->
+							<goal>properties</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<!-- Suppress warnings from the JVM. -->
+					<!-- When using jacoco, prefix with "@{argLine} " -->
+					<!-- "javaagent bytebuddy" can also be replaced with "-XX:+EnableDynamicAgentLoading" -->
+					<argLine>-Xshare:off -javaagent:${net.bytebuddy:byte-buddy-agent:jar}</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<!-- https://docs.spring.io/spring-boot/docs/current/maven-plugin/reference/htmlsingle/ -->
@@ -111,9 +130,9 @@
 							<profiles>
 								<profile>test</profile>
 							</profiles>
-							<directories>
-								<directory>src/test/resources</directory>
-							</directories>
+							<additionalClasspathElements>
+								<additionalClasspathElement>src/test/resources</additionalClasspathElement>
+							</additionalClasspathElements>
 						</configuration>
 					</plugin>
 				</plugins>
